Revert "[MODORDERS-1420]. Remove unnecessary withIsAcknowledged (#607)" (#608)
This reverts commit e37f9f80d8962f8b088e751c98c3891e41f02014.